@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 3?
 Core and builtins
 -----------------
 
+- Patch #2617: Reserved -J and -X arguments for Jython, IronPython and other
+  implementations of Python. 
+
 Extensions Modules
 ------------------
 
